--- a/apps/users/tsconfig.json
+++ b/apps/users/tsconfig.json
@@ -1,16 +1,6 @@
 {
-	"compilerOptions": {
-		"outDir": "dist",
-		"module": "commonjs",
-		"target": "es2024",
-		"lib": ["ES2024"],
-		"moduleResolution": "node",
-		"skipLibCheck": true,
-		"resolveJsonModule": true,
-		"esModuleInterop": true,
-		"incremental": true,
-		"sourceMap": true,
-		"inlineSources": true
-	},
-	"include": ["src/**/*", "package.json"]
+	"extends": "./tsconfig.base.json",
+	"sourceMap": false,
+	"inlineSources": false,
+	"incremental": false
 }
