--- a/apps/users/tsconfig.json
+++ b/apps/users/tsconfig.json
@@ -1,6 +1,8 @@
 {
 	"extends": "./tsconfig.base.json",
-	"sourceMap": false,
-	"inlineSources": false,
-	"incremental": false
+	"compilerOptions": {
+		"sourceMap": false,
+		"inlineSources": false,
+		"incremental": false
+	}
 }
