:construction_worker: introduced github action

--- a/apps/users/Dockerfile
+++ b/apps/users/Dockerfile
@@ -1,17 +1,7 @@
-FROM node:lts-alpine AS builder
-WORKDIR /app
-ENV NODE_OPTIONS="--max-old-space-size=1536"
-COPY package.json package-lock.json sheets-api.json .env tsconfig.json ./
-COPY src/ ./src
-COPY prisma/ ./prisma
-
-RUN npm install -g npm && npm ci
-RUN npm run build
-
 FROM node:lts-alpine
 WORKDIR /app
-COPY package.json package-lock.json sheets-api.json .env tsconfig.json ./
-COPY --from=builder /app/dist ./dist
+COPY package.json package-lock.json sheets-api.json .env ./
+COPY dist/ ./dist
 COPY prisma/ ./prisma
 RUN NODE_ENV=production npm ci --omit=dev
 RUN npx prisma generate
