--- a/.github/workflows/users-bot.yml
+++ b/.github/workflows/users-bot.yml
@@ -1,6 +1,6 @@
 name: Build and Deploy users-bot
 
-run-name: "Build and Deploy users-bot"
+run-name: 'Build and Deploy users-bot'
 
 on: workflow_dispatch
 
@@ -8,7 +8,8 @@ jobs:
     build_and_deploy:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v4
+            - name: Checkout code
+              uses: actions/checkout@v4
 
             - name: Setup Node
               uses: actions/setup-node@v4
