--- a/.github/workflows/users-bot.yml
+++ b/.github/workflows/users-bot.yml
@@ -2,7 +2,8 @@ name: Build and Deploy users-bot
 
 run-name: 'Build and Deploy users-bot'
 
-on: workflow_dispatch
+on: 
+  workflow_dispatch:
 
 jobs:
     build_and_deploy:
