--- a/.github/workflows/users-bot.yml
+++ b/.github/workflows/users-bot.yml
@@ -19,6 +19,7 @@ jobs:
 
             - name: Install dependencies
               run: npm ci
+              working-directory: apps/users
 
             - name: Build
               run: npm run build
