Added sheets-api generation in pipeline

--- a/.github/workflows/users-bot.yml
+++ b/.github/workflows/users-bot.yml
@@ -21,6 +21,10 @@ jobs:
               run: npm ci
               working-directory: apps/users
 
+            - name: Generate sheets-api.json
+              run: echo ${{ secrets.SHEETS_API }} > sheets-api.json
+              working-directory: apps/users
+
             - name: Build
               run: npm run build
               working-directory: apps/users
