--- a/.github/workflows/users-bot.yml
+++ b/.github/workflows/users-bot.yml
@@ -39,7 +39,7 @@ jobs:
                   host: ${{ secrets.DB_SERVER_HOST }}
                   username: ${{ secrets.DB_SERVER_USERNAME }}
                   key: ${{ secrets.DB_SERVER_SSH_KEY }}
-                  source: apps/users/dist.tar.gz
+                  source: ./apps/users/dist.tar.gz
                   target: ${{ secrets.DB_SERVER_APP_DIRECTORY }}
 
             - name: Deploy via SSH
