--- a/.github/workflows/keys-bot.yml
+++ b/.github/workflows/keys-bot.yml
@@ -11,7 +11,7 @@ on:
                 default: t
                 type: choice
                 options:
-                    - tur
+                    - turkey
                     - us
                     - de
                     - neth
