--- a/.github/workflows/keys-bot.yml
+++ b/.github/workflows/keys-bot.yml
@@ -19,6 +19,7 @@ on:
 jobs:
     build_and_deploy:
         runs-on: ubuntu-latest
+        environment: ${{ inputs.environment }}
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
