--- a/apps/keys/Dockerfile
+++ b/apps/keys/Dockerfile
@@ -1,10 +1,5 @@
-FROM node:lts-bookworm-slim
+FROM vpn-base
 WORKDIR /app
-
-RUN apt-get update && apt-get install -y --no-install-recommends \ 
-    qrencode wireguard apt-utils \
-    wget dnsutils openssl ca-certificates iproute2 unzip zip curl \
-    net-tools iptables libnss3-tools 
 
 COPY package.json package-lock.json .env ./
 COPY scripts/ ./scripts
