--- a/apps/keys/docker-compose.yml
+++ b/apps/keys/docker-compose.yml
@@ -1,4 +1,10 @@
 services:
+    base:
+        build:
+            context: .
+            dockerfile: ./Dockerfile.base
+        image: vpn-base
+
     app:
         image: keys-bot
         container_name: keys-bot
@@ -11,6 +17,8 @@ services:
             - NET_ADMIN
         devices:
             - /dev/net/tun
+        depends_on:
+            - base
         privileged: true
         restart: always
         volumes:
