--- a/.github/workflows/keys-bot.yml
+++ b/.github/workflows/keys-bot.yml
@@ -15,6 +15,7 @@ on:
                     - us
                     - de
                     - neth
+                    - fin
 
 jobs:
     build_and_deploy:
