--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -36,6 +36,13 @@
 			"problemMatcher": ["$tsc-watch"],
 			"group": "build",
 			"label": "tsc: watch - apps/users/tsconfig.dev.json"
+		},
+		{
+			"type": "typescript",
+			"tsconfig": "apps/users/tsconfig.dev.json",
+			"problemMatcher": ["$tsc"],
+			"group": "build",
+			"label": "tsc: build - apps/users/tsconfig.dev.json"
 		}
 	]
 }
