--- a/monitoring/docker-compose.mon.yml
+++ b/monitoring/docker-compose.mon.yml
@@ -4,8 +4,8 @@ services:
         container_name: prometheus
         network_mode: host
         volumes:
-            - ../monitoring/prometheus/config:/etc/prometheus
-            - ../monitoring/prometheus/data:/prometheus
+            - ../../monitoring/prometheus/config:/etc/prometheus
+            - ../../monitoring/prometheus/data:/prometheus
         command:
             [
                 "--config.file=/etc/prometheus/prometheus.yml",
