--- a/.github/workflows/keys-bot.yml
+++ b/.github/workflows/keys-bot.yml
@@ -16,6 +16,7 @@ on:
                     - de
                     - neth
                     - fin
+                    - neth-eternal-xray
 
 jobs:
     build_and_deploy:
