--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -1,7 +1,3 @@
-global:
-    scrape_interval: 15s
-    evaluation_interval: 15s
-
 scrape_configs:
     - job_name: 'prometheus'
       static_configs:
@@ -9,8 +5,4 @@ scrape_configs:
 
     - job_name: 'node'
       static_configs:
-          - targets: ['localhost:9100'] # Node Exporter
-
-    - job_name: 'wg'
-      static_configs:
-          - targets: ['localhost:9586'] # Wireguard
+          - targets: ['localhost:9100']
