--- a/apps/keys/Dockerfile.base
+++ b/apps/keys/Dockerfile.base
@@ -1,7 +1,5 @@
-FROM node:lts-bookworm-slim
+FROM hwdsl2/ipsec-vpn-server:debian
 WORKDIR /app
 
 RUN apt-get update && apt-get install -y --no-install-recommends \ 
-    qrencode wireguard apt-utils \
-    wget dnsutils openssl ca-certificates iproute2 unzip zip curl \
-    net-tools iptables libnss3-tools 
+    qrencode wireguard unzip zip curl
