--- a/docker-compose.3xui.yml
+++ b/docker-compose.3xui.yml
@@ -1,15 +1,15 @@
 services:
-  3x-ui:
-    image: ghcr.io/mhsanaei/3x-ui:latest
-    container_name: 3x-ui
-    volumes:
-    - $PWD/db/:/etc/x-ui/
-    - /etc/ssl/certs/3xui/:/etc/ssl/certs/3xui/:rw
-    environment:
-      XRAY_VMESS_AEAD_FORCED: "false"
-    tty: true
-    ports:
-      - 8712:8712
-      - 443:443
-      - 80:80
-    restart: unless-stopped
+    3x-ui:
+        image: ghcr.io/mhsanaei/3x-ui:latest
+        container_name: 3x-ui
+        volumes:
+            - $PWD/db/:/etc/x-ui/
+            - /etc/ssl/certs/3xui/:/etc/ssl/certs/3xui/:rw
+        environment:
+            XRAY_VMESS_AEAD_FORCED: 'false'
+        tty: true
+        ports:
+            - 8712:8712
+            - 443:443
+            - 80:80
+        restart: unless-stopped
