added vpn protect

--- a/apps/keys/docker-compose.yml
+++ b/apps/keys/docker-compose.yml
@@ -5,6 +5,8 @@ services:
             dockerfile: ./Dockerfile.base
         container_name: ipsec-vpn-server
         image: vpn-base
+        environment:
+            - VPN_PROTECT_CONFIG=yes
         cap_add:
             - NET_ADMIN
         privileged: true
