--- a/apps/keys/docker-compose.yml
+++ b/apps/keys/docker-compose.yml
@@ -49,7 +49,7 @@ services:
             # OpenVPN
             - /etc/openvpn:/etc/openvpn
             - /etc/openvpn/server:/etc/openvpn/server
-            - /etc/openvpn/server/easy-rsa/easyrsa:/etc/openvpn/server/easy-rsa/easyrsa:ro
+            # - /etc/openvpn/server/easy-rsa/easyrsa:/etc/openvpn/server/easy-rsa/easyrsa:ro
             - /etc/openvpn/client:/etc/openvpn/client
             - /etc/openvpn/update-resolv-conf:/etc/openvpn/update-resolv-conf:ro
             - /var/log/openvpn:/var/log/openvpn
