--- a/apps/keys/docker-compose.yml
+++ b/apps/keys/docker-compose.yml
@@ -12,8 +12,8 @@ services:
         privileged: true
         restart: always
         ports:
-            - 500:500
-            - 4500:4500
+            - "500:500/udp"
+            - "4500:4500/udp"
         volumes:
             - /etc/ipsec.d:/etc/ipsec.d
             - /lib/modules:/lib/modules:ro
@@ -55,5 +55,5 @@ services:
             - /var/log/openvpn:/var/log/openvpn
             - /usr/sbin/openvpn:/usr/sbin/openvpn:ro
             - /usr/bin/openssl:/usr/bin/openssl:ro
-            - /etc/ssl:/etc/ssl:ro
-            - /etc/pki:/etc/pki:ro
+            # - /etc/ssl:/etc/ssl:ro
+            # - /etc/pki:/etc/pki:ro
