--- a/apps/keys/Dockerfile.base
+++ b/apps/keys/Dockerfile.base
@@ -1,7 +1,7 @@
-FROM hwdsl2/ipsec-vpn-server:debian
+FROM node:lts-bookworm-slim
 WORKDIR /app
 
 RUN apt-get update && apt-get install -y --no-install-recommends \ 
-    qrencode wireguard unzip zip curl
-EXPOSE 500/udp
-EXPOSE 4500/udp
+    qrencode wireguard apt-utils \
+    wget dnsutils openssl ca-certificates iproute2 unzip zip curl \
+    net-tools iptables libnss3-tools 
