--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,14 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
+			"name": "Launch IKEv2 receiver",
+			"type": "go",
+			"request": "launch",
+			"mode": "debug",
+			"program": "${workspaceFolder}/apps/infrastructure/ikev2/receiver.go",
+			"envFile": "${workspaceFolder}/apps/infrastructure/ikev2/.env"
+		},
+		{
 			"name": "Launch Keys Bot nodemon",
 			"program": "${workspaceFolder}/apps/keys/src/index.ts",
 			"request": "launch",
