--- a/apps/keys/Dockerfile
+++ b/apps/keys/Dockerfile
@@ -1,10 +1,5 @@
-FROM vpn-base
+FROM node:lts-bookworm-slim
 WORKDIR /app
-
-RUN apt-get update && apt-get install -y curl gnupg \
-    && curl -fsSL https://deb.nodesource.com/setup_lts.x | bash - \
-    && apt-get install -y nodejs \
-    && rm -rf /var/lib/apt/lists/*
 
 COPY package.json package-lock.json .env ./
 COPY scripts/ ./scripts
