--- a/apps/infrastructure/openvpn/Dockerfile
+++ b/apps/infrastructure/openvpn/Dockerfile
@@ -10,6 +10,8 @@ FROM debian:latest
 
 WORKDIR /server
 
+RUN apt-get update && apt-get install -yqq openvpn
+
 COPY --from=builder /src/receiver /server/receiver
 COPY --from=builder /src/scripts /server/scripts
 
