Added ikev2 script to volume

--- a/apps/infrastructure/docker-compose.yml
+++ b/apps/infrastructure/docker-compose.yml
@@ -22,6 +22,7 @@ services:
         volumes:
             - /etc/ipsec.d:/etc/ipsec.d
             - /lib/modules:/lib/modules:ro
+            - /usr/bin/ikev2.sh:/usr/bin/ikev2.sh:ro
     wg_service:
         build:
             context: ./wireguard
