Check for entered client. Added pluto to volumes

--- a/apps/infrastructure/docker-compose.yml
+++ b/apps/infrastructure/docker-compose.yml
@@ -29,6 +29,7 @@ services:
             - /opt/src:/opt/src:ro
             - /usr/local/sbin:/usr/local/sbin:ro
             - /usr/local/libexec:/usr/local/libexec:ro
+            - /run/pluto:/run/pluto
     wg_service:
         build:
             context: ./wireguard
