New actions for deploying infrastructure and bot

--- a/apps/keys/Dockerfile.3xui
+++ b/apps/keys/Dockerfile.3xui
@@ -1,4 +1,4 @@
-FROM node:lts-bookworm-slim AS builder
+FROM node:lts-bookworm-slim
 WORKDIR /app
 
 COPY package.json package-lock.json tsconfig.json .env ./
