--- a/.github/workflows/keys-bot.upload.yml
+++ b/.github/workflows/keys-bot.upload.yml
@@ -25,7 +25,7 @@ jobs:
               uses: actions/checkout@v4
 
             - name: Build Docker image
-              run: docker compose build --no-cache
+              run: docker compose -f ./docker-compose.yml build --no-cache
               working-directory: apps/keys
 
             - name: Save Docker image
