дрянь под названием github actions

--- a/apps/keys/docker-compose.yml
+++ b/apps/keys/docker-compose.yml
@@ -5,14 +5,10 @@ services:
         build:
             context: .
             dockerfile: ./Dockerfile
-        environment:
-            - IKE_CLIENTS_DIR=/srv/ikev2/clients
-            - WG_CLIENTS_DIR=/srv/wireguard/clients
-            - OVPN_CLIENTS_DIR=/srv/openvpn/clients
         env_file: .env
         restart: always
         network_mode: host
         volumes:
-            - ${IKE_CLIENTS_DIR}:${IKE_CLIENTS_DIR}:ro
-            - ${WG_CLIENTS_DIR}:${WG_CLIENTS_DIR}:ro
-            - ${OVPN_CLIENTS_DIR}:${OVPN_CLIENTS_DIR}:ro
+            - /srv/ikev2/clients:${IKE_CLIENTS_DIR}:ro
+            - /srv/wireguard/clients:${WG_CLIENTS_DIR}:ro
+            - /srv/openvpn/clients:${OVPN_CLIENTS_DIR}:ro
