github actions hell

--- a/apps/keys/Dockerfile
+++ b/apps/keys/Dockerfile
@@ -1,9 +1,8 @@
 FROM node:lts-bookworm-slim
 WORKDIR /app
 
-COPY package.json package-lock.json .env ./
-COPY scripts/ ./scripts
-COPY dist/ ./dist
-RUN npm ci --omit=dev
+COPY package.json package-lock.json tsconfig.json .env ./
+COPY src/ ./src
 
+RUN npm ci && npm run build && NODE_ENV=production npm ci --omit=dev
 CMD [ "node", "dist/src/index.js" ]
