--- a/apps/keys/docker-compose.bot.3xui.yml
+++ b/apps/keys/docker-compose.bot.3xui.yml
@@ -4,7 +4,7 @@ services:
         container_name: keys-bot
         build:
             context: .
-            dockerfile: ./Dockerfile.3xui
+            dockerfile: ./Dockerfile
         env_file: .env
         network_mode: host
         restart: always
