--- a/.github/workflows/keys-bot.upload.yml
+++ b/.github/workflows/keys-bot.upload.yml
@@ -47,7 +47,7 @@ jobs:
                   username: ${{ secrets.VPN_SERVER_USERNAME }}
                   key: ${{ secrets.VPN_SERVER_SSH_KEY }}
                   source: ./apps/keys/keys-bot.tar
-                  target: ${{ secrets.VPN_SERVER_APP_DIRECTORY }}
+                  target: ${{ secrets.VPN_SERVER_APP_DIRECTORY }}/apps/keys
 
             - name: Load and run Docker image
               uses: appleboy/ssh-action@v1.2.2
@@ -56,7 +56,7 @@ jobs:
                   username: ${{ secrets.VPN_SERVER_USERNAME }}
                   key: ${{ secrets.VPN_SERVER_SSH_KEY }}
                   script: |
-                      cd ${{ secrets.VPN_SERVER_APP_DIRECTORY }}
+                      cd ${{ secrets.VPN_SERVER_APP_DIRECTORY }}/apps/keys
                       docker load -i keys-bot.tar
                       docker compose up -d --no-build app
                       rm keys-bot.tar
