--- a/.github/workflows/keys-bot.3xui.transfer.yml
+++ b/.github/workflows/keys-bot.3xui.transfer.yml
@@ -1,6 +1,6 @@
-name: Build and Deploy keys-bot
+name: Build and Transfer keys-bot on 3X-UI server
 
-run-name: 'Build and Deploy keys-bot'
+run-name: 'Build and Transfer keys-bot on 3X-UI server'
 
 on:
     workflow_dispatch:
@@ -11,10 +11,7 @@ on:
                 default: t
                 type: choice
                 options:
-                    - turkey
-                    - us
-                    - neth
-                    - fin
+                    - neth-eternal-xray
 
 jobs:
     build_and_deploy:
@@ -24,33 +21,24 @@ jobs:
             - name: Checkout code
               uses: actions/checkout@v4
 
-            - name: Setup Node
-              uses: actions/setup-node@v4
-              with:
-                  node-version: 22
-
-            - name: Install dependencies
-              run: npm ci
+            - name: Build Docker image
+              run: docker compose -f ./docker-compose.bot.3xui.yml build --no-cache
               working-directory: apps/keys
 
-            - name: Build
-              run: npm run build
+            - name: Save Docker image
+              run: docker save keys-bot -o keys-bot.tar
               working-directory: apps/keys
 
-            - name: Archive dist
-              run: tar -czf dist.tar.gz dist
-              working-directory: apps/keys
-
-            - name: Upload to server
+            - name: Upload Docker image
               uses: appleboy/scp-action@v1
               with:
                   host: ${{ secrets.VPN_SERVER_HOST }}
                   username: ${{ secrets.VPN_SERVER_USERNAME }}
                   key: ${{ secrets.VPN_SERVER_SSH_KEY }}
-                  source: ./apps/keys/dist.tar.gz
-                  target: ${{ secrets.VPN_SERVER_APP_DIRECTORY }}
+                  source: ./apps/keys/keys-bot.tar
+                  target: ${{ secrets.VPN_SERVER_APP_DIRECTORY }}/apps/keys
 
-            - name: Deploy via SSH
+            - name: Load and run Docker image
               uses: appleboy/ssh-action@v1.2.2
               with:
                   host: ${{ secrets.VPN_SERVER_HOST }}
@@ -58,9 +46,6 @@ jobs:
                   key: ${{ secrets.VPN_SERVER_SSH_KEY }}
                   script: |
                       cd ${{ secrets.VPN_SERVER_APP_DIRECTORY }}/apps/keys
-                      git pull
-                      rm -rf dist
-                      tar -xzf dist.tar.gz
-                      rm dist.tar.gz
-                      docker compose build --no-cache app
-                      docker compose up -d app
+                      docker load -i keys-bot.tar
+                      docker compose up -d --no-build app
+                      rm keys-bot.tar
