--- a/.github/workflows/infrastructure.transfer.yml
+++ b/.github/workflows/infrastructure.transfer.yml
@@ -17,7 +17,7 @@ on:
 jobs:
     build-deploy:
         runs-on: ubuntu-latest
-
+        environment: ${{ inputs.environment }}
         steps:
             - name: Checkout
               uses: actions/checkout@v4
