--- a/.github/workflows/infrastructure.transfer.yml
+++ b/.github/workflows/infrastructure.transfer.yml
@@ -27,6 +27,11 @@ jobs:
               with:
                   ssh-private-key: ${{ secrets.VPN_SERVER_SSH_KEY }}
 
+            - name: Add VPN server to known hosts
+              run: |
+                mkdir -p ~/.ssh
+                ssh-keyscan -H ${{ secrets.VPN_SERVER_HOST }} >> ~/.ssh/known_hosts                  
+
             - name: Build IKEv2 image
               working-directory: apps/infrastructure
               run: |
